--- a/client/public/index.html
+++ b/client/public/index.html
@@ -52,6 +52,29 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.3/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.3/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyDsAmBoCKnGHxTHJgvdUwqMI_PetY0u28w",
+        authDomain: "twitter-clone-f0bb0.firebaseapp.com",
+        projectId: "twitter-clone-f0bb0",
+        storageBucket: "twitter-clone-f0bb0.appspot.com",
+        messagingSenderId: "581743802043",
+        appId: "1:581743802043:web:63b2262550af7770605b9e",
+        measurementId: "G-822Z2JD70Y"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
 </body>
 
 </html>
